--- a/theme/partials/index.hbs
+++ b/theme/partials/index.hbs
@@ -1,5 +1,7 @@
 {{#if categories}}
     <section class="tsd-panel-group tsd-index-group">
+		<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-7962287588031867" data-ad-slot="2542544532"></ins>
+		<script> (adsbygoogle = window.adsbygoogle || []).push({});</script>
         <h2>Index</h2>
         <section class="tsd-panel tsd-index-panel">
             <div class="tsd-index-content">
@@ -19,6 +21,8 @@
 {{else}}
     {{#if groups}}
     <section class="tsd-panel-group tsd-index-group">
+		<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-7962287588031867" data-ad-slot="2542544532"></ins>
+		<script> (adsbygoogle = window.adsbygoogle || []).push({});</script>
         <h2>Index</h2>
         <section class="tsd-panel tsd-index-panel">
             <div class="tsd-index-content">
