--- a/theme/partials/members.group.hbs
+++ b/theme/partials/members.group.hbs
@@ -8,6 +8,9 @@
                 {{/unless}}
             {{/each}}
         </section>
+		<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid"
+			data-ad-client="ca-pub-7962287588031867" data-ad-slot="2542544532"></ins>
+		<script> (adsbygoogle = window.adsbygoogle || []).push({});</script>
     {{/each}}
 {{else}}
     <section class="tsd-panel-group tsd-member-group {{cssClasses}}">
@@ -17,5 +20,8 @@
                 {{> member}}
             {{/unless}}
         {{/each}}
+		<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid"
+			data-ad-client="ca-pub-7962287588031867" data-ad-slot="2542544532"></ins>
+		<script> (adsbygoogle = window.adsbygoogle || []).push({});</script>
     </section>
 {{/if}}
