--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{#ifCond model.name '==' project.name}}{{project.name}}{{else}}{{model.name}} | {{project.name}}{{/ifCond}}</title>
     <meta name="description" content="VS Code API is a set of JavaScript APIs that you can invoke in your Visual Studio Code extension. This page lists all VS Code APIs available to extension authors.">
-    <meta property="og:site_name" content="VS Code API">
+	<meta name="author" content="洛竹">
+	<meta name="copyright" content="洛竹">
+	<meta property="og:title" content="VS Code API" />
     <meta property="og:type" content="docs">
-    <meta property="og:url" content="https://youngjuning.js.org/vscode-api/index.html">
+	<meta property="og:image" content="https://code.visualstudio.com/favicon.ico" />
+    <meta property="og:url" content="https://vscode-api.js.org/index.html">
+    <meta property="og:site_name" content="VS Code API">
+	<meta property="og:description" content="VS Code API is a set of JavaScript APIs that you can invoke in your Visual Studio Code extension. This page lists all VS Code APIs available to extension authors.">
     <meta property="article:tag" content="vscode">
     <meta property="article:tag" content="vscode api">
     <meta property="article:tag" content="VS Code API">
     <meta property="article:tag" content="VS Code Extension API">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="article:tag" content="vscode {{project.name}}">
+	<meta property="article:tag" content="vscode {{model.name}}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="shortcut icon" href="https://code.visualstudio.com/favicon.ico" sizes="128x128">
+	<link rel='canonical' href='https://vscode-api-cn.js.org/{{url}}' />
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <script async src="{{relativeURL "assets/js/search.js"}}" id="search-script"></script>
 	{{!-- google adsense --}}
@@ -69,6 +77,11 @@
     <div class="row">
         <div class="col-8 col-content">
             {{{contents}}}
+			<div class="tsd-panel tsd-typography">
+				<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-7962287588031867"
+					data-ad-slot="3578139931"></ins>
+				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+			</div>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
