--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -67,11 +67,11 @@
     <div class="row">
         <div class="col-8 col-content">
             {{{contents}}}
-			<div class="tsd-panel tsd-typography">
+			{{!-- <div class="tsd-panel tsd-typography">
 				<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-7962287588031867"
 					data-ad-slot="3578139931"></ins>
 				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-			</div>
+			</div> --}}
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
