chore: remove async

--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -84,7 +84,7 @@
 
             <nav class="tsd-navigation secondary menu-sticky">
 				<div style="width: 200px">
-					<script async="async" type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=20n70IgpPDEMELLyVCjUTuTRYgLhQqp4q_mFxFrmw_0"></script>
+					<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=20n70IgpPDEMELLyVCjUTuTRYgLhQqp4q_mFxFrmw_0"></script>
 				</div>
                 <ul class="before-current">
                     {{#each toc.children}}
