--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -21,7 +21,7 @@
 	<meta property="article:tag" content="vscode {{model.name}}">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="shortcut icon" href="https://code.visualstudio.com/favicon.ico" sizes="128x128">
-	<link rel='canonical' href='https://vscode-api-cn.js.org/{{url}}' />
+	<link rel='canonical' href='https://vscode-api.js.org/{{url}}' />
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <script async src="{{relativeURL "assets/js/search.js"}}" id="search-script"></script>
 	{{!-- google adsense --}}
