--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -66,13 +66,12 @@
 <div class="container container-main">
     <div class="row">
         <div class="col-8 col-content">
-			<div class="TrafficApeAds" data-type="728x90"></div>
             {{{contents}}}
-			{{!-- <div class="tsd-panel tsd-typography">
+			<div class="tsd-panel tsd-typography">
 				<ins class="adsbygoogle" style="display:block" data-ad-format="autorelaxed" data-ad-client="ca-pub-7962287588031867"
 					data-ad-slot="3578139931"></ins>
 				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-			</div> --}}
+			</div>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
@@ -102,6 +101,5 @@
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
 {{> analytics}}
-<script src="https://az622064.vo.msecnd.net/scripts/apeads.js?key=0dfb2336-346c-4062-be08-a633e5229abe"></script>
 </body>
 </html>
