--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -80,6 +80,9 @@
             </nav>
 
             <nav class="tsd-navigation secondary menu-sticky">
+		<div style="width: 200px">
+			<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=qVIkfOBwRQEYQ-KeEJi1mydEksAUHl5sDCkc1TsemHE"></script>
+		</div>
                 <ul class="before-current">
                     {{#each toc.children}}
                         {{> toc.root}}
