--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -98,6 +98,7 @@
 
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
+<script>(adsbygoogle = window.adsbygoogle || []).push({ 'enable_page_level_ads': true });</script>
 {{> analytics}}
 </body>
 </html>
