--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <script async src="{{relativeURL "assets/js/search.js"}}" id="search-script"></script>
 	{{!-- google adsense --}}
-	<script async src="https://vscode-api.js.org/adsbygoogle.js" crossorigin="anonymous"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4D7WZ6E85W"></script>
 	<script>
