--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -66,9 +66,9 @@
 <div class="container container-main">
     <div class="row">
         <div class="col-8 col-content">
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins>
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
             {{{contents}}}
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867" data-ad-slot="3826142559" data-ad-format="auto" data-full-width-responsive="true"></ins>
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867" data-ad-slot="3826142559" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
@@ -88,6 +88,7 @@
                         {{> toc.root}}
                     {{/each}}
 					<ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86" data-ad-client="ca-pub-4963807055498900" data-ad-slot="1249314825" data-override-format="true" data-page-url="https://pantip.com"></ins>
+					<script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
                 </ul>
             </nav>
         </div>
@@ -98,7 +99,6 @@
 
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
-<script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
 {{> analytics}}
 </body>
 </html>
