--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -68,7 +68,7 @@
         <div class="col-8 col-content">
 			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
             {{{contents}}}
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867" data-ad-slot="3826142559" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
+			<ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86" data-ad-client="ca-pub-4963807055498900" data-ad-slot="1249314825" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
@@ -87,8 +87,6 @@
                     {{#each toc.children}}
                         {{> toc.root}}
                     {{/each}}
-					<ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86" data-ad-client="ca-pub-4963807055498900" data-ad-slot="1249314825" data-override-format="true" data-page-url="https://pantip.com"></ins>
-					<script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
                 </ul>
             </nav>
         </div>
