--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -68,7 +68,7 @@
         <div class="col-8 col-content">
 			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
             {{{contents}}}
-			<ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86" data-ad-client="ca-pub-4963807055498900" data-ad-slot="1249314825" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
@@ -80,14 +80,15 @@
             </nav>
 
             <nav class="tsd-navigation secondary menu-sticky">
-		<div style="width: 200px">
-			<script async type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=20n70IgpPDEMELLyVCjUTuTRYgLhQqp4q_mFxFrmw_0"></script>
-		</div>
+                <div style="width: 200px">
+                    <script async type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=20n70IgpPDEMELLyVCjUTuTRYgLhQqp4q_mFxFrmw_0"></script>
+                </div>
                 <ul class="before-current">
                     {{#each toc.children}}
                         {{> toc.root}}
                     {{/each}}
                 </ul>
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4963807055498900" data-ad-host="ca-host-pub-1012064661720050" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true" data-page-url="https://pantip.com"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
             </nav>
         </div>
     </div>
