--- a/theme/layouts/default.hbs
+++ b/theme/layouts/default.hbs
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <script async src="{{relativeURL "assets/js/search.js"}}" id="search-script"></script>
 	{{!-- google adsense --}}
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7962287588031867" crossorigin="anonymous"></script>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4D7WZ6E85W"></script>
 	<script>
@@ -66,9 +66,9 @@
 <div class="container container-main">
     <div class="row">
         <div class="col-8 col-content">
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5641491107630454" data-ad-slot="1645676004" data-page-url="https://www.nablepart.com/vscode-api" data-override-format="true" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
+			<ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-7962287588031867" data-ad-slot="1993549381"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
             {{{contents}}}
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5641491107630454" data-ad-slot="5702084207" data-page-url="https://www.nablepart.com/vscode-api" data-override-format="true" data-ad-format="auto" data-full-width-responsive="true" data-override-format="true"><script>(adsbygoogle = window.adsbygoogle || []).push({ });</script>
+			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7962287588031867" data-ad-slot="9253022493" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
         <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
             <nav class="tsd-navigation primary">
